--- a/package.json
+++ b/package.json
@@ -4,19 +4,32 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "dependencies": {
+    "-": "^0.0.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "material-ui-popup-state": "^4.1.0",
     "react": "^17.0.2",
+    "react-comments-section": "^2.0.10",
     "react-dom": "^17.0.2",
+    "react-profile-avatar": "^1.0.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.3",
+    "react-user-profile": "^1.0.3",
     "redux": "^4.0.5",
+    "redux-devtools": "^3.7.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
